uploading to dev branch

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,4 +1,4 @@
-email: 'rjtax@gmail.com'
-phone: 'XXXX XXX XXX'
+email: 'gbajaj@rjconsultants.com.au'
+phone: '0401 399 182'
 businessName: 'RjTax'
-address: ''
+address: 'For your convenience we have 2 locations for appointments: <br/>1076 North Road, Bentleigh East, Vic 3165<br/>8 Passion Crescent, Tarneit, Vic 3029'
