--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,4 +1,6 @@
 email: 'gbajaj@rjconsultants.com.au'
 phone: '0401 399 182'
-businessName: 'RjTax'
-address: 'For your convenience we have 2 locations for appointments: <br/>1076 North Road, Bentleigh East, Vic 3165<br/>8 Passion Crescent, Tarneit, Vic 3029'
+businessName: 'RJ Tax'
+address: 'For your convenience we have 2 locations for appointments:'
+address1: '1076 North Road, Bentleigh East, Vic 3165'
+address2: '8 Passion Crescent, Tarneit, Vic 3029'
