Email Address Change

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,4 +1,4 @@
-email: 'gbajaj@rjconsultants.com.au'
+email: 'info@rjconsultants.com.au'
 phone: '0401 399 182'
 businessName: 'RJ Tax'
 address: 'For your convenience we have 2 locations for appointments:'
